--- a/qgis_plugin/frontend/ui/annotation_dockwidget.ui
+++ b/qgis_plugin/frontend/ui/annotation_dockwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>238</width>
+    <width>269</width>
     <height>379</height>
    </rect>
   </property>
@@ -43,9 +43,6 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="comboBox_classe"/>
-      </item>
       <item row="2" column="1">
        <widget class="QToolButton" name="toolButton_annotPointer">
         <property name="text">
@@ -77,29 +74,13 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item alignment="Qt::AlignTop">
-         <widget class="QPushButton" name="pushButton_add">
-          <property name="text">
-           <string/>
-          </property>
-          <property name="icon">
-           <iconset theme="list-add">
-            <normaloff>.</normaloff>.</iconset>
-          </property>
-         </widget>
+      <item row="4" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <widget class="QLineEdit" name="lineEdit"/>
         </item>
-        <item alignment="Qt::AlignTop">
-         <widget class="QPushButton" name="pushButton_remove">
-          <property name="text">
-           <string/>
-          </property>
-          <property name="icon">
-           <iconset theme="list-remove">
-            <normaloff>.</normaloff>.</iconset>
-          </property>
-         </widget>
+        <item>
+         <widget class="QgsColorButton" name="mColorButton"/>
         </item>
        </layout>
       </item>
@@ -116,13 +97,30 @@
         </property>
        </spacer>
       </item>
-      <item row="4" column="1">
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item row="5" column="1">
+       <widget class="QPushButton" name="pushButton_add">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset theme="list-add"/>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QSpinBox" name="spinBox"/>
+         <widget class="QComboBox" name="comboBox_classe"/>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit"/>
+         <widget class="QToolButton" name="toolButton_color">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -156,6 +154,13 @@
    </layout>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QgsColorButton</class>
+   <extends>QToolButton</extends>
+   <header>qgscolorbutton.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
