add coreset to plugin

--- a/qgis_plugin/frontend/ui/interact_learn.ui
+++ b/qgis_plugin/frontend/ui/interact_learn.ui
@@ -187,6 +187,11 @@
            <string>bald</string>
           </property>
          </item>
+         <item>
+          <property name="text">
+           <string>coreset</string>
+          </property>
+         </item>
         </widget>
        </item>
        <item row="1" column="0">
