--- a/qgis_plugin/frontend/ui/interact_learn.ui
+++ b/qgis_plugin/frontend/ui/interact_learn.ui
@@ -41,30 +41,12 @@
          <property name="sizeConstraint">
           <enum>QLayout::SetDefaultConstraint</enum>
          </property>
-         <item row="0" column="3">
-          <widget class="QToolButton" name="toolButton_selectData">
+         <item row="1" column="3">
+          <widget class="QToolButton" name="toolButton_selectLabel">
            <property name="text">
             <string>...</string>
            </property>
           </widget>
-         </item>
-         <item row="1" column="2">
-          <layout class="QFormLayout" name="formLayout_2">
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_label_title">
-             <property name="text">
-              <string>Label:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QLabel" name="label_label_name">
-             <property name="text">
-              <string>none</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
          </item>
          <item row="0" column="2">
           <layout class="QFormLayout" name="formLayout">
@@ -84,14 +66,14 @@
            </item>
           </layout>
          </item>
-         <item row="1" column="3">
-          <widget class="QToolButton" name="toolButton_selectLabel">
+         <item row="0" column="3">
+          <widget class="QToolButton" name="toolButton_selectData">
            <property name="text">
             <string>...</string>
            </property>
           </widget>
          </item>
-         <item row="3" column="2" colspan="2">
+         <item row="5" column="2" colspan="2">
           <layout class="QHBoxLayout" name="horizontalLayout_2">
            <property name="sizeConstraint">
             <enum>QLayout::SetDefaultConstraint</enum>
@@ -135,11 +117,36 @@
            </item>
           </layout>
          </item>
-         <item row="2" column="2">
-          <widget class="QPushButton" name="select_window">
-           <property name="text">
-            <string>Select window</string>
-           </property>
+         <item row="1" column="2">
+          <layout class="QFormLayout" name="formLayout_2">
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_label_title">
+             <property name="text">
+              <string>Label:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QLabel" name="label_label_name">
+             <property name="text">
+              <string>none</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="4" column="2">
+          <widget class="QComboBox" name="comboBox_preprocessing">
+           <item>
+            <property name="text">
+             <string>No preprocessing</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>SLIC segmentation</string>
+            </property>
+           </item>
           </widget>
          </item>
         </layout>
