--- a/qgis_plugin/frontend/ui/interact_learn.ui
+++ b/qgis_plugin/frontend/ui/interact_learn.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>554</width>
-    <height>278</height>
+    <height>346</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -311,6 +311,26 @@
            <string>CPU</string>
           </property>
          </item>
+        </widget>
+       </item>
+       <item row="7" column="1">
+        <widget class="QSpinBox" name="spinBox_n_superpixels"/>
+       </item>
+       <item row="8" column="1">
+        <widget class="QSpinBox" name="spinBox_compactness"/>
+       </item>
+       <item row="7" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Nb superpixels</string>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="0">
+        <widget class="QLabel" name="label_9">
+         <property name="text">
+          <string>Compactness</string>
+         </property>
         </widget>
        </item>
       </layout>
